# Python-Docker-Env

./: .gitignore  Dockerfile  README.md  environment.yml  environment_geo.yml  pyproject.toml  toDo.md
