[tool.poetry]
name = "Python-Poetry-Env"
version = "0.1.0"
description = "Base Poetry environment for Python projects"
authors = ["ortak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
conda-lock = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
